crates/swc_ecma_parser/tests/test262-error-references/fail/30f6acf0bf2f7f06.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/30f6acf0bf2f7f06.js:1:26
  |
1 | function *g(){ (a, b, c, yield) => 42 }
  |                          ^^^^^

